security error settled